--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
         <nav>
             <ul>
                 <li><a href="#home">الرئيسية</a></li>
-                <li><a href="#flowers">الورود</a></li>
-                <li><a href="#gifts">الهدايا</a></li>
-                <li><a href="#contact">تواصل معنا</a></li>
+                <li><a href="flowers.html">الورود</a></li>
+                <li><a href="gifts.html">الهدايا</a></li>
+                <li><a href="contact.html">تواصل معنا</a></li>
+                <li><a href="cart.html">السلة</a></li>
             </ul>
         </nav>
+        <div class="currency-selector">
+            <label for="currency">اختر العملة:</label>
+            <select id="currency">
+                <option value="SAR">ريال سعودي (SAR)</option>
+                <option value="USD">دولار أمريكي (USD)</option>
+                <option value="EUR">يورو (EUR)</option>
+            </select>
+        </div>
     </header>
 
     <section id="home">
@@ -26,53 +35,20 @@
 
     <section id="flowers">
         <h2>الورود</h2>
-        <div class="product">
+        <div class="product" data-id="flower1" data-price="50">
             <img src="images/flower1.jpg" alt="ورد أحمر">
             <h3>ورد أحمر</h3>
-            <p>السعر: 50 ريال</p>
+            <p class="price">السعر: 50 ريال</p>
         </div>
-        <div class="product">
+        <div class="product" data-id="flower2" data-price="45">
             <img src="images/flower2.jpg" alt="ورد أبيض">
             <h3>ورد أبيض</h3>
-            <p>السعر: 45 ريال</p>
-        </div>
-        <!-- المزيد من المنتجات -->
-    </section>
-
-    <section id="gifts">
-        <h2>الهدايا</h2>
-        <div class="product">
-            <img src="images/gift1.jpg" alt="دب صغير">
-            <h3>دب صغير</h3>
-            <p>السعر: 70 ريال</p>
-        </div>
-        <div class="product">
-            <img src="images/gift2.jpg" alt="علبة شوكولاتة">
-            <h3>علبة شوكولاتة</h3>
-            <p>السعر: 60 ريال</p>
+            <p class="price">السعر: 45 ريال</p>
         </div>
         <!-- المزيد من المنتجات -->
     </section>
 
     <section id="contact">
-        <section id="checkout">
-            <h2>إنهاء الشراء</h2>
-            <form id="checkout-form">
-                <label for="product">المنتج:</label>
-                <select id="product" name="product" required>
-                    <option value="flower1">ورد أحمر - 50 ريال</option>
-                    <option value="flower2">ورد أبيض - 45 ريال</option>
-                    <option value="gift1">دب صغير - 70 ريال</option>
-                    <option value="gift2">علبة شوكولاتة - 60 ريال</option>
-                </select>
-                <label for="quantity">الكمية:</label>
-                <input type="number" id="quantity" name="quantity" required>
-                <label for="address">العنوان:</label>
-                <input type="text" id="address" name="address" required>
-                <button type="submit">إتمام الشراء</button>
-            </form>
-        </section>
-        
         <h2>تواصل معنا</h2>
         <form>
             <label for="name">الاسم:</label>
@@ -82,6 +58,24 @@
             <label for="message">الرسالة:</label>
             <textarea id="message" name="message" required></textarea>
             <button type="submit">إرسال</button>
+        </form>
+    </section>
+
+    <section id="checkout">
+        <h2>إنهاء الشراء</h2>
+        <form id="checkout-form">
+            <label for="product">المنتج:</label>
+            <select id="product" name="product" required>
+                <option value="flower1">ورد أحمر - 50 ريال</option>
+                <option value="flower2">ورد أبيض - 45 ريال</option>
+                <option value="gift1">دب صغير - 70 ريال</option>
+                <option value="gift2">علبة شوكولاتة - 60 ريال</option>
+            </select>
+            <label for="quantity">الكمية:</label>
+            <input type="number" id="quantity" name="quantity" required>
+            <label for="address">العنوان:</label>
+            <input type="text" id="address" name="address" required>
+            <button type="submit">إتمام الشراء</button>
         </form>
     </section>
 
